bpk-lib/crates/macbat/macros/tests/trybuild_negative/event_generic.stderr
error: event payloads may not carry generic parameters
 --> tests/trybuild_negative/event_generic.rs:4:8
  |
4 | struct E<T> {
  |        ^
